--- a/include/config.h.in
+++ b/include/config.h.in
@@ -1204,6 +1204,9 @@
 /* Define to 1 if you have the <valgrind/valgrind.h> header file. */
 #undef HAVE_VALGRIND_VALGRIND_H
 
+/* Define to 1 if you have the <va/va_drm.h> header file. */
+#undef HAVE_VA_VA_DRM_H
+
 /* Define to 1 if you have the <va/va_x11.h> header file. */
 #undef HAVE_VA_VA_X11_H
 
@@ -1437,6 +1440,9 @@
 
 /* Define to the soname of the libva library. */
 #undef SONAME_LIBVA
+
+/* Define to the soname of the libva-drm library. */
+#undef SONAME_LIBVA_DRM
 
 /* Define to the soname of the libva-x11 library. */
 #undef SONAME_LIBVA_X11
