--- a/loader/wine.inf.in
+++ b/loader/wine.inf.in
@@ -2872,6 +2872,7 @@ HKLM,%CurrentVersion%\Telephony\Country List\998,"SameAreaRule",,"G"
 11,,iexplore.exe
 11,,winetest.exe,-
 12,,dxgkrnl.sys,-
+12,,dxgmms1.sys,-
 12,,fltmgr.sys,-
 12,,ksecdd.sys,-
 12,,mountmgr.sys,-
@@ -2924,6 +2925,7 @@ HKLM,%CurrentVersion%\Telephony\Country List\998,"SameAreaRule",,"G"
 11,,notepad.exe
 11,,winetest.exe,-
 12,,dxgkrnl.sys
+12,,dxgmms1.sys
 12,,fltmgr.sys
 12,,ksecdd.sys
 12,,mountmgr.sys
