ntdll: Improve heap allocation performance. (v2)

--- a/include/config.h.in
+++ b/include/config.h.in
@@ -1336,6 +1336,9 @@
 /* Define to 1 if you have the `_spawnvp' function. */
 #undef HAVE__SPAWNVP
 
+/* Define to 1 if you have the `__builtin_ctzl' built-in function. */
+#undef HAVE___BUILTIN_CTZL
+
 /* Define to 1 if you have the `__builtin_popcount' built-in function. */
 #undef HAVE___BUILTIN_POPCOUNT
 
