--- a/include/config.h.in
+++ b/include/config.h.in
@@ -287,6 +287,9 @@
 /* Define to 1 if you have the <gssapi/gssapi.h> header file. */
 #undef HAVE_GSSAPI_GSSAPI_H
 
+/* Define to 1 if you have the <gtk/gtk.h> header file. */
+#undef HAVE_GTK_GTK_H
+
 /* Define to 1 if you have the <ieeefp.h> header file. */
 #undef HAVE_IEEEFP_H
 
@@ -1381,6 +1384,9 @@
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
+/* Define to the soname of the libcairo library. */
+#undef SONAME_LIBCAIRO
+
 /* Define to the soname of the libcapi20 library. */
 #undef SONAME_LIBCAPI20
 
@@ -1420,11 +1426,17 @@
 /* Define to the soname of the libgnutls library. */
 #undef SONAME_LIBGNUTLS
 
+/* Define to the soname of the libgobject-2.0 library. */
+#undef SONAME_LIBGOBJECT_2_0
+
 /* Define to the soname of the libgsm library. */
 #undef SONAME_LIBGSM
 
 /* Define to the soname of the libgssapi_krb5 library. */
 #undef SONAME_LIBGSSAPI_KRB5
+
+/* Define to the soname of the libgtk-3 library. */
+#undef SONAME_LIBGTK_3
 
 /* Define to the soname of the libhal library. */
 #undef SONAME_LIBHAL
